<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trailobot_teleop</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yinchheanyun@todo.todo">yinchheanyun</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>control_msgs</depend>  <!-- Optional: For any control-specific messages -->
  
  <!-- ROS 2 dependencies -->
  <depend>ros2_control</depend>  <!-- Ensure the robot uses ros2_control for joint control -->
  <depend>ros2_controllers</depend>  <!-- Include controllers such as joint_trajectory_controller -->

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
